<resources>
    <string name="app_name">SoftwareDesign-Lab4</string>
    <string name="post_image">Post image</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="points">...</string>
    <string name="enter_url">Enter URL</string>
    <string name="start">Start</string>
    <string name="auto">auto</string>
    <string name="new_url">New URL</string>
    <string name="autoUrl">https://tech.onliner.by/feed</string>
</resources>
